ace/designerflows-no-tracing/designerflows-no-tracing-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: designerflows-no-tracing-gw
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - designerflows-no-tracing.cp4i-ossm-example.eu-gb.containers.appdomain.cloud
