ace/designerflows-no-tracing/designerflows-no-tracing-destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: designerflows-no-tracing-dr
spec:
  host: designerflows-no-tracing-is
