ace/designerflows-no-tracing/designerflows-no-tracing-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: designerflows-no-tracing-vs
spec:
  hosts:
  - "*"
  gateways:
  - designerflows-no-tracing-gw
  http:
  - match:
    - labels:
          istioselector: not-a-mandatory-value
    route:
    - destination:
        host: designerflows-no-tracing-is
        port:
          number: 7800
